fixed rogue paragrapff end tag on the crads to make usre the text aligns and removed padding and margin from footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -94,12 +94,3 @@ mark {
     background-color: transparent;
     border: #B79FAD;
 }
-
-.opening-times {
-    width: fit-content;
-    margin-top: 2rem;
-}
-
-.address {
-    margin-top: 2rem;
-}
